Fixed issue where column scroll cuts off screen

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1,5 +1,5 @@
 .content {
-	margin-top: 90px;
+	margin-top: 50px;
 	margin-bottom: 50px;
 }
 .undecorated-link:hover {
